[package]
name = "xplane-sys"
version = "4.0.103"
authors = ["Julia DeMille <me@jdemille.com>"]
description = "Low-level bindings for the X-Plane plugin SDK"
repository = "https://github.com/judemille/xplane-sys"
readme = "README.md"
keywords = ["X-Plane", "plugin"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
build = "build.rs"
edition = "2021"

[dependencies]
bitfield = "0.14"
mockall = { version = "0.11", optional = true }

[build-dependencies]
bindgen = "0.69"
target-lexicon = "0.12.10"

[features]
default = []
XPLM400 = ["XPLM303"]
XPLM303 = ["XPLM301"]
XPLM301 = ["XPLM300"]
XPLM300 = ["XPLM210"]
XPLM210 = ["XPLM200"]
XPLM200 = []
fmod = []
mockall = ["dep:mockall"]

[package.metadata.docs.rs]
features = ["XPLM400", "fmod"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
