# SPDX-FileCopyrightText: 2024 Julia DeMille <me@jdemille.com
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "xplane-sys"
version = "4.0.104"
authors = ["Julia DeMille <me@jdemille.com>"]
description = "Low-level bindings for the X-Plane plugin SDK"
repository = "https://git.sr.ht/~jdemille/xplane-sys"
readme = "README.md"
keywords = ["X-Plane", "plugin"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
build = "build.rs"
edition = "2021"

[dependencies]
bitfield = "0.14"
mockall = { version = "~0.12", optional = true }

[build-dependencies]
bindgen = "0.69"

[target.'cfg(target_os = "linux")'.build-dependencies]
cmake = "~0.1"

[features]
default = []
XPLM400 = ["XPLM303"]
XPLM303 = ["XPLM302"]
XPLM302 = ["XPLM301"]
XPLM301 = ["XPLM300"]
XPLM300 = ["XPLM210"]
XPLM210 = ["XPLM200"]
XPLM200 = []
fmod = []
mockall = ["dep:mockall"]
stub-linux = []

[package.metadata.docs.rs]
features = ["XPLM400"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
